// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`actions connectionUpdate 1`] = `
Object {
  "type": "connection",
  "value": true,
}
`;

exports[`actions infoUpdate 1`] = `
Object {
  "acceptedPrices": Object {
    "custodian": Array [
      "acceptPrices",
    ],
  },
  "exchangePrices": Object {
    "source": Array [
      "exchangePrices",
    ],
  },
  "status": Array [
    "status1",
  ],
  "tokens": Array [
    "token1",
  ],
  "type": "info",
}
`;

exports[`actions notificationUpdate 1`] = `
Object {
  "type": "notification",
  "value": Object {
    "level": "level",
    "message": "message",
    "title": "title",
    "transactionHash": "txHash",
  },
}
`;

exports[`actions orderBookUpdate 1`] = `
Object {
  "type": "orderBook",
  "value": Object {
    "test": "test",
  },
}
`;

exports[`actions orderHistoryUpdate 1`] = `
Object {
  "type": "orderHistory",
  "value": Array [
    Object {
      "test": "test",
    },
  ],
}
`;

exports[`actions orderSubscriptionUpdate 1`] = `
Object {
  "account": "account",
  "type": "orderSubscription",
}
`;

exports[`actions orderUpdate 1`] = `
Object {
  "type": "order",
  "value": Object {
    "test": "test",
  },
}
`;

exports[`actions subscribeOrder 1`] = `
Array [
  Object {
    "account": "",
    "type": "orderSubscription",
  },
  Object {
    "account": "account",
    "type": "orderSubscription",
  },
]
`;

exports[`actions subscribeOrder 2`] = `
Array [
  Array [
    "account",
  ],
]
`;

exports[`actions subscribeOrder dummy account 1`] = `
Array [
  Object {
    "account": "",
    "type": "orderSubscription",
  },
]
`;

exports[`actions tradeSubscriptionUpdate 1`] = `
Object {
  "pair": Object {
    "test": "test",
  },
  "type": "tradeSubscription",
}
`;

exports[`actions tradeUpdate 1`] = `
Object {
  "pair": "test",
  "trades": Array [],
  "type": "trade",
}
`;
